<resources>
    <string name="app_name">달당</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_splash_main">SplashActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="slogan">달달한 사과를 만나당</string>
    <string name="orchard_start_description">달당은 사과의 농도를 측정합니다.\n우리집 과수원을 설정하고\n최고 품질의 사과를 눈으로 만나보세요.</string>
    <string name="orchard_start_btn">우리집 과수원 설정하고 로그인</string>
    <string name="sign_up">회원 가입</string>
    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="normal_sign_up">일반 회원가입</string>
    <string name="profile">프로필</string>
    <string name="my_orchard_name">우리집 과수원명</string>
    <string name="area">지역</string>
    <string name="introduce_self">자기소개</string>
    <string name="sign_up_space">가      입</string>
    <string name="kind">기르는 품종</string>
    <string name="fuji">부사</string>
    <string name="market_name">공판장명</string>
    <string name="settings">설정</string>
    <string name="history">측정 이력</string>
    <string name="home">홈</string>
    <string name="camera">카메라</string>
    <string name="measure_count">측정 개수</string>
    <string name="ge">개</string>
    <string name="pest_info">병충해 정보</string>
    <string name="report">보고서</string>
    <string name="average">평균</string>
    <string name="brix">당도</string>
    <string name="measure_new">새로 측정</string>
    <string name="go_home">처음으로</string>
    <string name="my_subscribe_service">나의 구독 서비스</string>
    <string name="policy">이용 약관</string>
    <string name="logout">로그아웃</string>
    <string name="weather">날씨</string>
    <string name="title_activity_maps">Map</string>
    <string name="area_setting">지역 설정하기</string>
    <string name="search">검 색</string>
    <string name="search_market">공판장 찾기</string>
    <string name="agree">동 의</string>
</resources>
