<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="5dp"
        app:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStartWithNavigation="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="#000000"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="4sp"
            android:fontFamily="@font/dreamm"
            android:layout_gravity="center_horizontal" />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/back_round_stroke_rectangle"
                android:scaleType="center"
                android:src="@drawable/ic_person"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/text_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.02"
                android:lineSpacingExtra="6sp"
                android:fontFamily="@font/dreamm"
                android:text="@string/profile"
                android:textColor="#707070"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_profile" />

            <FrameLayout
                android:id="@+id/layout_line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="24dp"
                android:background="#f1f1f1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_profile" />

            <EditText
                android:id="@+id/edit_id"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:fontFamily="@font/dreaml"
                android:hint="@string/id"
                android:inputType="textEmailAddress"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_line" />

            <EditText
                android:id="@+id/edit_pw"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:fontFamily="@font/dreaml"
                android:hint="@string/pw"
                android:inputType="textPassword"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_id" />

            <EditText
                android:id="@+id/edit_orchard_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:fontFamily="@font/dreaml"
                android:hint="@string/my_orchard_name"
                android:inputType="text"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_pw" />

            <EditText
                android:id="@+id/edit_location"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:fontFamily="@font/dreaml"
                android:hint="지역 (터치하세요)"
                android:inputType="text"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_orchard_name"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edit_market"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:fontFamily="@font/dreaml"
                android:hint="공판장명 (터치하세요)"
                android:inputType="text"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_location"
                android:focusable="false"/>

            <EditText
                android:id="@+id/edit_kind"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/dreaml"
                android:hint="@string/kind"
                android:inputType="text"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:paddingLeft="16dp"
                android:text="@string/fuji"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_market" />

            <EditText
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@null"
                android:fontFamily="@font/dreaml"
                android:hint="@string/introduce_self"
                android:inputType="text"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="8sp"
                android:maxLines="1"
                android:paddingLeft="16dp"
                android:textColorHint="#dbdbdb"
                android:textCursorDrawable="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_kind" />

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@drawable/back_round_rectangle"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/sign_up_space"
                android:fontFamily="@font/dreamb"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:letterSpacing="0.03"
                android:lineSpacingExtra="8sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_description"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>