<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.OrchardStartActivity">
    <TextView
        android:id="@+id/text_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/dreamm"
        android:textSize="20sp"
        android:textColor="@color/colorGreen"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="4sp"
        />
    <ImageView
        android:id="@+id/img_text_logo"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_text_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_slogan"
        android:layout_marginTop="5dp"
        android:contentDescription="@null" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_bando_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_text_logo"
        app:layout_constraintBottom_toTopOf="@id/text_description"
        >
        <ImageView
            android:id="@+id/img_bando_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bando_center"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mark_map"
            app:layout_constraintTop_toTopOf="@id/img_bando_center"
            app:layout_constraintBottom_toBottomOf="@id/img_bando_center"
            app:layout_constraintLeft_toLeftOf="@id/img_bando_center"
            app:layout_constraintRight_toRightOf="@id/img_bando_center"
            app:layout_constraintVertical_bias="0.3"
            android:contentDescription="@null"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bando_jeju"
            app:layout_constraintTop_toBottomOf="@id/img_bando_center"
            app:layout_constraintLeft_toLeftOf="@id/img_bando_center"
            android:layout_marginTop="24dp"
            android:contentDescription="@null"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_bando_dokdo"
            app:layout_constraintLeft_toRightOf="@id/img_bando_center"
            app:layout_constraintTop_toTopOf="@id/img_bando_center"
            app:layout_constraintBottom_toBottomOf="@id/img_bando_center"
            android:layout_marginLeft="28dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orchard_start_description"
        android:fontFamily="@font/dreamb"
        android:textSize="16sp"
        android:textColor="#707070"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="13sp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_bando_img"
        app:layout_constraintBottom_toTopOf="@id/btn_orchard_n_login"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_orchard_n_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/back_round_rectangle"
        android:text="@string/orchard_start_btn"
        android:fontFamily="@font/dreamb"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="4sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>